Changelog
=========

6.6-dev - (unreleased)
----------------------
* Change: Removed unnecessary margin for Daviz in indicator.
  Better wording on buttons.
  [demarant refs #9571]
* Bug fix: give better information to users about 2 words minimum 
  requirement in IMS text content
  [tiberich #14175]
* Bug fix: alphabetically sort Related Policy Documents in aggregated edit
  and specification view.
* Bug fix: fix data source provenance in assessment view
  [tiberich #14273]

6.5 - (2013-03-15)
------------------
* Bug fix: don't break on specification publishing due to discussion API
  changes
  [tiberich]
* Bug fix: conform to api changes in eea.daviz to allow sortable relations
  to Daviz Vizualizations charts
  [tiberich #13993]

6.4 - (2013-02-21)
---------------------
* Bug fix: fix content rules integration for Assessment
  [tiberich #13895]

6.3 - (2013-02-21)
------------------
* Bug fix: Display charts only when tab is clicked
  [szabozo0 refs #13673]
* Bug fix: fixed data provenance information logic and layout consistency.
  use existing data.info view.
  [demarant refs #9561 and #9571]
* Bug fix: fix adding Assessments from add new item menu
  [tiberich #13897]
* Bug fix: don't fail when reindexing object outside aquisition context
  [tiberich #13836]
* Bug fix: don't call assessment key when checking for it in condition to 
  avoid assestment part calling
  [ichimdav #13771]
* Bug fix: Corrected wrong spelling. 
  [prospchr refs #13827]

6.2 - (2013-02-05)
------------------
* Bug fix: show data sources in specification view
  [tiberich #13721]

6.1 - (2013-01-25)
------------------
* Change: made inddicators-figure-plus img span 100% min-width since some 
  files are too small and they should fit the width of the container
  [ichimdav]
* Bug fix: fixed a couple of html5 validation errors found on assestment pages
  [ichimdav]

6.0 - (2013-01-19)
------------------
* Bug fix: fix figures display in assessment view
  [tiberich #9571]
